--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "csbin",
+  "name": "csbin-tribute",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
@@ -7,7 +7,7 @@
     "test": "jest"
   },
   "keywords": [],
-  "author": "",
+  "author": "Dominic van Almsick",
   "license": "ISC",
   "devDependencies": {
     "jest": "^27.5.1",
